--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                     </div>
                 </div>
                 <a href="" class="nav-item nav-link">Consultoria</a>
-                <a href="" class="nav-item nav-link">Contáctanos</a>
+                <a href="contactanos.html" class="nav-item nav-link">Contáctanos</a>
             </div>
             <a href="" class="btn btn-primary rounded-0 py-4 px-lg-5 d-none d-lg-block">Programa una Cita<i class="fa fa-arrow-right ms-3"></i></a>
         </div>
@@ -360,7 +360,7 @@
          <h1 class="text-white mb-4">
            <i class="fa fa-building text-primary me-3"></i>K&B
          </h1>
-         <p>
+         <p class="text-white">
            Diam dolor diam ipsum sit. Aliqu diam amet diam et eos. Clita erat
            ipsum et lorem et sit, sed stet lorem sit clita
          </p>
@@ -380,17 +380,17 @@
          </div>
        </div>
        <div class="col-lg-3 col-md-6">
-         <h4 class="text-light mb-4">Address</h4>
-         <p>
-           <i class="fa fa-map-marker-alt me-3"></i>123 Street, New York, USA
+         <h4 class="text-light mb-4">Direccion</h4>
+         <p class="text-white">
+           <i class="fa fa-map-marker-alt me-3"></i>Huanuco
          </p>
-         <p><i class="fa fa-phone-alt me-3"></i>+012 345 67890</p>
-         <p><i class="fa fa-envelope me-3"></i>info@example.com</p>
+         <p class="text-white"><i class="fa fa-phone-alt me-3"></i>+012 345 67890</p>
+         <p class="text-white"><i class="fa fa-envelope me-3"></i>kybinmobiliaria@gmail.com</p>
        </div>
        <div class="col-lg-3 col-md-6">
          <h4 class="text-light mb-4">Quick Links</h4>
-         <a class="btn btn-link" href="">Nosotros</a>
-         <a class="btn btn-link" href="">Contactanos</a>
+         <a class="btn btn-link" href="nosotros.html">Nosotros</a>
+         <a class="btn btn-link" href="contactanos.html">Contactanos</a>
          <a class="btn btn-link" href="">Nuestros Servicios</a>
          <a class="btn btn-link" href="">Términos y Condiciones</a>
          <a class="btn btn-link" href="">Soporte</a>
